# graduation

./: .gitignore  README.md  index.html  out.txt  package-lock.json  package.json
api/: .gitignore  Cargo.toml  DOCUMENTATION.md  Shuttle.toml  log.txt  udo lsof -i :8000
api/data/: 10000.txt  10004.txt  10005.txt  10007.txt  10008.txt  10009.txt  10012.txt  10014.txt  10033.txt  10034.txt  10038.txt  10045.txt  10049.txt  10052.txt  10055.txt  10056.txt  10060.txt  10061.txt  10070.txt  10072.txt  10082.txt  10085.txt  10086.txt  10090.txt  10091.txt  10097.txt  10100.txt  10108.txt  10115.txt  10119.txt  10120.txt  10124.txt  10128.txt  10135.txt  10148.txt  10149.txt  10155.txt  10156.txt  10158.txt  10165.txt  (+911 more)
api/src/: connections.rs  countdown.rs  counter.rs  file.rs  log.rs  main.rs  structs.rs
api/src/data/: 10001.txt  10002.txt  10003.txt  10006.txt  10013.txt  10015.txt  10022.txt  10040.txt  10043.txt  10044.txt  10048.txt  10050.txt  10053.txt  10054.txt  10057.txt  10058.txt  10059.txt  10063.txt  10064.txt  10065.txt  10066.txt  10071.txt  10076.txt  10079.txt  10083.txt  10087.txt  10088.txt  10093.txt  10101.txt  10102.txt  10103.txt  10105.txt  10107.txt  10109.txt  10110.txt  10111.txt  10117.txt  10122.txt  10125.txt  10127.txt  (+937 more)
api/src/graph/: colour.rs  connections.rs  helper.rs  mod.rs
scraper/: clean.py  logAnalysis.py  math.py  mike.py  out.txt  test.py
src/: App.vue
src/constants/: index.ts
src/router/: index.ts
src/views/: HomeView.vue  connectionsView.vue  countdownView.vue
