[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.1"
tokio = { version = "1.42", features = ["full"] }
shuttle-runtime = "0.49.0"
shuttle-axum = "0.49.0"
serde = "1.0.217"
chrono = "0.4.39"
tower-http = { version = "0.6.2", features = ["full"] }
http = "1.2.0"
shuttle = "0.8.0"