[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.0"
tokio = { version = "1.42", features = ["full"] }
shuttle-runtime = "0.52.0"
shuttle-axum = "0.52.0"
serde = "1.0.217"
chrono = "0.4.39"
tower-http = { version = "0.6.2", features = ["full"] }
http = "1.2.0"
shuttle = "0.8.0"
cargo-shuttle = "0.52.0"
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio", "tls-native-tls"] }
postgres = "0.19.10"
